# mujou

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .mergify.yml  .mise.toml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dioxus.toml  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  deny.toml  mise.toml  package-lock.json  package.json  renovate.json5  rustfmt.toml  typos.toml
.github/: dependabot.yml  pages-ips.json
.github/workflows/: check-pages-ips.yml  ci.yml  deploy-github-pages.yml  reflow-coverage.yml  reflow-mise.yml  reflow-pre-commit.yml  reflow-rust.yml  reflow-wasm.yml  renovate.yml
assets/examples/: cherry-blossoms.prompt.md
crates/mujou/: Cargo.toml  build.rs
crates/mujou-app/: Cargo.toml  build.rs
crates/mujou-app/src/: main.rs
crates/mujou-bench/: Cargo.toml
crates/mujou-bench/src/: main.rs
crates/mujou-export/: Cargo.toml
crates/mujou-export/src/: lib.rs  svg.rs  thr.rs
crates/mujou-export/tests/: cherry_blossoms.rs
crates/mujou-fade/: Cargo.toml
crates/mujou-fade/src/: main.rs
crates/mujou-io/: Cargo.toml
crates/mujou-io/src/: analytics.rs  clipboard.rs  download.rs  lib.rs  raster.rs  stage.rs  worker.rs
crates/mujou-io/src/components/: export.rs  filmstrip.rs  mod.rs  preview.rs  stage_controls.rs  stage_preview.rs  upload.rs
crates/mujou-pipeline/: Cargo.toml
crates/mujou-pipeline/src/: blur.rs  canny.rs  contour.rs  diagnostics.rs  downsample.rs  edge.rs  grayscale.rs  join.rs  lib.rs  mask.rs  mst_join.rs  normalize.rs  optimize.rs  pipeline.rs  segment_analysis.rs  simplify.rs  subsample.rs  types.rs
crates/mujou-worker/: Cargo.toml
crates/mujou-worker/src/: lib.rs
crates/mujou/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/ecosystem/: community.md  formats.md  index.md  manufacturers.md  software.md
docs/src/project/: architecture.md  decisions.md  development.md  formats.md  implementation.md  index.md  naming.md  open-questions.md  pipeline.md  principles.md  requirements.md  ui.md
docs/src/tutorial/: .markdownlint-cli2.yaml  images  index.md  tutorial.css
scripts/: capture-tutorial-screenshots.js  preview.sh  render-template.py
site/: analytics.html  index.html  robots.txt  sitemap.xml  theme-detect.js  theme-toggle.js  theme.css
