[package]
name = "mujou-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Convert raster images to vector paths for sand tables and CNC devices"
keywords = ["image-processing", "vector", "wasm", "sand-table"]
categories = ["graphics"]

[dependencies]
dioxus.workspace = true
dioxus-free-icons.workspace = true
getrandom_0_2.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
mujou-io.workspace = true
mujou-pipeline.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]

[lints]
workspace = true
