[package]
name = "mujou-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for experimenting with pipeline parameters and collecting diagnostics"
keywords = ["benchmark", "diagnostics"]
categories = ["command-line-utilities"]

[[bin]]
name = "mujou-bench"
path = "src/main.rs"

[dependencies]
mujou-pipeline.workspace = true
mujou-export.workspace = true
clap.workspace = true
serde_json.workspace = true

[lints]
workspace = true
