[package]
name = "mujou-export"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure format serializers for mujou output formats (sans-IO)"
keywords = ["vector", "svg", "gcode", "export"]
categories = ["graphics"]

[dependencies]
mujou-pipeline.workspace = true
svg.workspace = true
thiserror.workspace = true

[dev-dependencies]
image.workspace = true

[lints]
workspace = true
