[package]
name = "mujou-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web worker entry point for mujou pipeline processing"
keywords = ["wasm", "web-worker", "image-processing"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom_0_2.workspace = true
image.workspace = true
mujou-pipeline.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true

[lints]
workspace = true
